--- a/sample_02/index.html
+++ b/sample_02/index.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
       
       <header>
-        <h1>site name</h1>
+        <h1>ペトリコールたち</h1>
         <div id="wave"></div>
         <div id="line"></div>
       </header>
@@ -25,9 +25,9 @@
       </div>
 
       <ul id="menu">
-        <li id="btn01">MENU1</li>
-        <li id="btn02">MENU2</li>
-        <li id="btn03">MENU3</li>
+        <li id="btn01"></li>
+        <li id="btn02"></li>
+        <li id="btn03"></li>
       </ul>
 
       <div id="content">
