--- a/sample_swiper/index.html
+++ b/sample_swiper/index.html
@@ -11,22 +11,55 @@
   <link rel="stylesheet" href="./css/sample_swiper.css">
 </head>
 <body>
-  
+
 <!-- Slider main container -->
 <div class="swiper">
   <!-- Additional required wrapper -->
   <div class="swiper-wrapper">
     <!-- Slides -->
-    <div class="swiper-slide" id="slide01">
-      <div class="inner_txt">水音</div>
+    <div class="swiper-slide" style="background-image: url('./petoriimage/rainandasfalt.jpg');">
+      <div class="inner_txt">
+     <div id="texta2" class="petoritexts">雨が降った時</div>
+     <div id="texta3" class="petoritexts">アスファルトにしみこむ</div>
+     <div id="texta4" class="petoritexts">あなたはその原因を</div>
+     <div id="texta5" class="petoritexts">その名前を</div>
+     <div id="texta6" class="petoritexts">しっているだろうか</div>
+     <div class="texta1">ペトリコールたちのことを
+     </div>
     </div>
-    <div class="swiper-slide" id="slide02">
-      <div class="inner_txt">虫の声</div>
+     <button　id="btn1" class="btn">info</button>
     </div>
-    <div class="swiper-slide" id="slide03">
-      <div class="inner_txt">大雨</div>
+
+    <div class="swiper-slide" style="background-image: url('./petoriimage/taxiii.jpg');">
+     <div class="inner_txt">
+     <div id="texta2" class="petoritexts">くたくたに疲れた体</div>
+     <div id="texta3" class="petoritexts">なんとか手を挙げて</div>
+     <div id="texta4" class="petoritexts">乗り込んだタクシー</div>
+     <div id="texta5" class="petoritexts">座席から漂う</div>
+     <div id="texta6" class="petoritexts">工業的な鼻をつくにおい</div>
+     <div class="texta1">このにおいをなんと呼ぶ？
+     </div>
     </div>
-  </div>
+    
+    </div>
+     <button　id="btn2" class="btn">info</button>
+    </div>
+
+    <div class="swiper-slide" style="background-image: url('./petoriimage/frdigee.jpg');">
+      <div class="inner_txt">
+      <div id="texta2" class="petoritexts">冷蔵庫を開けた時の</div>
+      <div id="texta3" class="petoritexts">冷凍食品や</div>
+      <div id="texta4" class="petoritexts">氷のにおいがまざった</div>
+      <div id="texta5" class="petoritexts">少し生臭く</div>
+      <div id="texta6" class="petoritexts">弁当にも感じられるにおい</div>
+      <div class="texta1">このにおいをなんと呼ぶ？
+      </div>
+    </div>
+
+    </div>
+   
+    
+
   <!-- If we need pagination -->
   <div class="swiper-pagination"></div>
 
@@ -34,12 +67,15 @@
   <div class="swiper-button-prev"></div>
   <div class="swiper-button-next"></div>
 
-
 </div>
   <!-- 必要なライブラリをネット上から直接参照 CDN -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
   <!-- 自分のjs -->
+  <script src="./js/jquery.js"></script>
   <script src="./js/sample_swiper.js"></script>
+  
+
 </body>
+
 </html>
